added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -17,8 +18,19 @@
         <ul>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>A link creates the connection to the external file </li>
+          <li>A rel attribute specifies the relationship between the current document and the linked document resource</li>
+          <li>A href attribute specifies the location (URL) of the external source</li>
+          <li>A inline styles apply to a specific HTML tag, using a style attribute with a CSS rule to style a particular page element only</li>
+          <li>A internal style sheet contains CSS rules for the webpage in the head section of the HTML file</li>
+          <li>A declaration contains two important compenents: the CSS property we want to apply and the value of the property</li>
+          <li>A cascading style sheet (CSS) is a programming language used by developers to define how webpage content is presented to our users</li>
+          <li>The img selector assigns property values to any image element in the markup</li>
+          <li>The display property is assigned with the block value, which assigns each image to start on a new line </li>
         </ul>
-      </section>
+        </section>
      
       <section class="card" id="css-section">
         <h2>CSS</h2>
