updated prework study guide

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>Cascading Style Sheets (CSS) programming language used by developers to define how webpage content is presented to users</li>
+          <li>Internal style sheet contains CSS rules for the webpage in the head section of the HTML file</li>
+          <li>External CSS style sheet is the most common way to style a web page because it allows developers to keep all their CSS rules in a seperate file</li>
+          <li>Declarations contain two important components: The CSS property we want to apply and the value of the properrty</li>
+          <li></li>
         </ul>
       </section>
    
