--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-        </ul>
-      </section>
+          <li>git -b creates a new branch</li>
+          <li>git add command adds modifications in the current working branch to the staging<li>
+          <li>git commit allows you to bind all modifications made in the current working branch</li>
+          <li>git push command allows you to create a new remote branch or add new changes to an existing branch</li>
+          </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
